--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".ActivityUsuario"/>
         <activity android:name=".ActivityUsuario2" />
+        <activity android:name=".ActivityDefault"/>
 
     </application>
 
