--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity android:name=".ActivityProducto"/>
         <activity android:name=".ActivityPrincipal"/>
         <activity android:name=".ActivityPerfil"/>
+        <activity android:name=".ActivityDulces"/>
+        <activity android:name=".ActivityComida"/>
+        <activity android:name=".ActivityTodos"/>
 
 
     </application>
